--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="enter_password">Enter Password</string>
     <string name="enter_username">Enter Username</string>
     <string name="register">Register</string>
+    <string name="enter_product">Enter Product</string>
+    <string name="description">Description</string>
+    <string name="quantity">Quantity</string>
+    <string name="product_price">Product Price</string>
 </resources>
