--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="description">Description</string>
     <string name="quantity">Quantity</string>
     <string name="product_price">Product Price</string>
+    <string name="enter_product_name">Enter Product Name</string>
 </resources>
